// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete upload item action 1`] = `
Array [
  Object {
    "payload": Object {
      "name": "fileOne",
      "upload": "uploadTestKey",
    },
    "type": "Upload/deleteItem",
  },
]
`;

exports[`destroy upload action 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadTestKey",
    },
    "type": "Upload/destroyUpload",
  },
]
`;

exports[`push upload item action 1`] = `
Array [
  Object {
    "payload": Object {
      "filePath": "filePathOne",
      "name": "fileOne",
      "upload": "uploadKey",
    },
    "type": "Upload/pushItem",
  },
]
`;

exports[`register upload action 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadKey",
    },
    "type": "Upload/registerUpload",
  },
]
`;

exports[`start upload action 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadTestKey",
    },
    "type": "Upload/startUpload",
  },
]
`;

exports[`start upload item action 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadTestKey",
    },
    "type": "Upload/startUploadItem",
  },
]
`;

exports[`upload complete action 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadTestKey",
    },
    "type": "Upload/uploadComplete",
  },
]
`;

exports[`upload item failed action 1`] = `
Array [
  Object {
    "payload": Object {
      "upload": "uploadTestKey",
    },
    "type": "Upload/failedUploadItem",
  },
]
`;

exports[`upload item success action 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "123456",
      "upload": "uploadTestKey",
    },
    "type": "Upload/successUploadItem",
  },
]
`;
